# merlin

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
merlin/: audit.py  detection.py  factory.py  manipulation.py  utils.py
merlin/datasets/: __init__.py  celeba.py  utils.py
merlin/helpers/: __init__.py  dataset.py  parameterparser.py  transform.py
merlin/models/: __init__.py
merlin/models/skorch/: __init__.py  pretrainednetclassifier.py
merlin/models/torch/: __init__.py  lenet.py  resnet.py
notebooks/: dev.ipynb  mean.py  plot_prep.ipynb  prob_diff_tests.ipynb  robust.ipynb
scripts/: launch.sh  train_celeba.py  train_lenet_celeba.py
