[project]
name = "merlin"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "polars",
    "matplotlib",
    "folktables",
    "scikit-learn",
    "pyarrow",
    "skrub",
    "seaborn",
    "scipy",
    "plotly",
    "typer-slim",
    # Notebook dependencies
    "ipykernel",
    "nbformat",
    "tqdm",
    "kagglehub",
    "torch",
    "torchvision"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
fairlearn = { git = "https://github.com/fairlearn/fairlearn/" }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]
main = "python main.py"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pyright]
venvPath = "./.pixi/envs/"
venv = "default"
exclude = ["**/__pycache__", "data", "generated"]

[tool.pytest.ini_options]
addopts = "-s"
log_cli = true

[tool.ruff.lint]
# Comparison to True/False rule, annoying when working with numpy
ignore = ["E712"]
